--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,20 +1,30 @@
 @import "./normalize.css"
 @import "./reset.styl"
-  .header
-    width: 100%
-    background: blue
-    text-align: center
+.header
+  width: 100%
+  height: 64px
+  line-height: 64px
+  background: #606060
+  display: flex
+  justify-content: space-between
 
-    .h1
-      color: white
-      font-size: 32px
-
-    .h2
-      color: blue
-      font-size: 100px
-  .main
-    width: 100%
-    background: red
-  .footer
-    width: 100%
-    background: green
+  .header-menu
+    margin: 10px 0 0 10px
+    .header-menu-top
+      height: 3px
+      border-radius: 10px
+      background: #FBFBFB
+      width: 32px
+      margin: 10px 0
+    .header-menu-middle
+      height: 3px
+      border-radius: 10px
+      background: #FBFBFB
+      width: 32px
+      margin: 10px 0
+    .header-menu-bottom
+      height: 3px
+      border-radius: 10px
+      background: #FBFBFB
+      width: 32px
+      margin: 10px 0
